# word-converter

./: .gitignore  CMakeLists.txt  README.md  WordConverter.cpp  WordConverter.h  inputfile.txt  main.cpp
res/: outputfile.txt
src/lib/: CMakeLists.txt
